# mosromgr

./: .gitignore  LICENSE.txt  Makefile  README.md  README.rst  RELEASE.md  coverage.cfg  description.rst  setup.cfg  setup.py  tox.ini
.github/: CONTRIBUTING.md
.github/workflows/: test.yml
docs/: api_exceptions.rst  api_moscollection.rst  api_moselements.rst  api_mostypes.rst  api_utils.rst  changelog.rst  cli.rst  conf.py  development.rst  exceptions.rst  feedback.rst  getting_started.rst  guide.rst  howto.rst  index.rst  intro.rst  moscollection.rst  moscontainer.rst  moselements.rst  mosfactory.rst  mostypes.rst  uses.rst  utils.rst
docs/_templates/: layout.html  theme.conf
docs/api/: exceptions.rst  index.rst  moscollection.rst  moselements.rst  mostypes.rst  utils.rst
docs/cli/: detect.rst  index.rst  inspect.rst  merge.rst
docs/examples/: exampleRoCreate.xml  exampleRoElementAction.xml
docs/images/: .gitignore  class_hierarchy.dot  class_hierarchy.py
mosromgr/: __init__.py  cli.py  exc.py  moscollection.py  moscontainer.py  moselements.py  mosfactory.py  mostypes.py
mosromgr/cli/: mosromgr.py
mosromgr/utils/: __init__.py  s3.py  sns.py  xml.py
tests/: conftest.py  const.py  test_cli.py  test_moscollection.py  test_moscontainer.py  test_moselements.py  test_mosfactory.py  test_mostypes.py
tests/cli/: test_mosromgr.py
tests/mock_mos/: roCreate.mos  roCreate.mos.xml  roCreate2.mos  roCreate3.mos  roCreate4.mos.xml  roCreate5.mos.xml  roCreate6.mos.xml  roCtrl.mos  roDelete.mos  roDelete2.mos  roElementActionInsertStory.mos  roElementActionItemDelete.mos  roElementActionItemDelete2.mos.xml  roElementActionItemDelete3.mos.xml  roElementActionItemInsert.mos.xml  roElementActionItemInsert2.mos.xml  roElementActionItemInsert3.mos.xml  roElementActionItemInsert4.mos.xml  roElementActionItemMove2.mos.xml  roElementActionItemMove3.mos.xml  roElementActionItemMove4.mos.xml  roElementActionItemReplace.mos  roElementActionItemReplace.mos.xml  roElementActionItemReplace2.mos.xml  roElementActionItemReplace3.mos.xml  roElementActionItemSwap.mos  roElementActionItemSwap2.mos.xml  roElementActionItemSwap3.mos.xml  roElementActionItemSwap4.mos.xml  roElementActionMoveItem.mos  roElementActionReplaceStory.mos  roElementActionStoryDelete.mos  roElementActionStoryDelete2.mos.xml  roElementActionStoryInsert.mos.xml  roElementActionStoryInsert2.mos.xml  roElementActionStoryInsert3.mos.xml  roElementActionStoryInsert4.mos.xml  roElementActionStoryMove.mos.xml  roElementActionStoryMove2.mos.xml  roElementActionStoryMove3.mos.xml  (+56 more)
tests/mock_xml/: item.xml  item_mosart.xml  item_note.xml  story.xml  story2.xml  story3.xml
tests/mostypes/: test_mostype_detection.py  (+8 more)
(+1 files in other folders)
