# coding: utf-8
[metadata]
name = mosromgr
version = attr: mosromgr.__version__
description = Python library for managing MOS running orders
long_description = file: README.rst
author = BBC News Labs
author_email = BBCNewsLabsTeam@bbc.co.uk
url = https://apps.test.newslabs.co/docs/mosromgr/
project_urls =
    Documentation = https://apps.test.newslabs.co/docs/mosromgr/
    Source Code = https://github.com/bbc/mosromgr
    Issue Tracker = https://github.com/bbc/mosromgr/issues
keywords = mos, mosprotocol, bbc, openmedia, runningorder
license = BSD 3-Clause License
classifiers =
    Development Status :: 4 - Beta
    Operating System :: POSIX
    Operating System :: Unix
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: Utilities

[options]
packages = find:
python_requires = >=3.6
install_requires =
    setuptools
    boto3
    xmltodict

[options.extras_require]
test =
    pytest
    coverage
    mock
    pylint
doc =
    sphinx
    sphinx-rtd-theme

[options.entry_points]
console_scripts =
    mosromgr = mosromgr.cli.mosromgr:main
